# currencies

./: .dockerignore  .env.db  .gitignore  Dockerfile  README.md  docker-compose.yaml
app/: auth.py  main.py
app/crud/: currency.py
app/exceptions/: user.py
app/models/: base.py  currency.py  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
backend/app/: auth.py  config.py  frontend.py  main.py  models.py  schemes.py
backend/app/api/v1/: __init__.py  auth.py  currencies.py  users.py
backend/app/crud/: __init__.py  currency.py  user.py
backend/app/exceptions/: currency.py
backend/app/models/: __init__.py  base.py  currency.py
backend/app/schemes/: currency.py  token.py  user.py
backend/configuration/: .env  .env.dev  .env.test
backend/logs/: logs.test.txt  logs.txt
backend/migrations/versions/: 1048d340738d_init.py
backend/tests/: utils.py
backend/tests/api/: conftest.py
backend/tests/api/currencies/: test_add_currencies.py  test_get_currencies.py  test_get_currency.py  test_remove_currency.py  test_update_currencies.py  test_upsert_currencies.py
backend/tests/api/users/: test_get_current_user.py  test_get_user.py  test_register_admin.py  test_register_user.py  test_remove_user.py  test_reset_password.py  test_update_user.py
backend/tests/schemes/: test_currencies_schemes.py
frontend/: .dockeringore  README.md  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend-old/: Dockerfile  README.md  package-lock.json  package.json
migrations/: env.py
tests/: conftest.py
(+30 files in other folders)
