[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["batir <batir.vik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
psycopg = "^3.2.1"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
bcrypt = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.9.1"}
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pyright = "^1.1.379"
httpx = "^0.27.2"
greenlet = "^3.1.0"
faker = "^28.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
